--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,8 @@
     <string name="setting_about_changelog_summary">https://github.com/PureDark/H-Viewer/releases</string>
     <string name="setting_about_version">版本号</string>
     <string name="setting_about_version_summary">v0.1.0</string>
+    <string name="setting_about_qq_group">加入内测群</string>
+    <string name="setting_about_qq_group_summary">590668841</string>
     <string name="setting_about_donate">捐赠</string>
     <string name="setting_about_donate_summary">支付宝:bruce.lee.liang@gmail.com</string>
 
