--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">H-Viewer</string>
 
+    <string name="UA">Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.102 Safari/537.36</string>
+
     <string name="navigation_drawer_open">打开站点抽屉</string>
     <string name="navigation_drawer_close">关闭站点抽屉</string>
 
