--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,7 +88,9 @@
     <string name="setting_about_donate_summary">支付宝:bruce.lee.liang@gmail.com</string>
     <string name="settings_bk_rs">备份恢复</string>
     <string name="settings_backup">备份</string>
+    <string name="settings_backup_summary">备份站点,设置,收藏夹</string>
     <string name="settings_restore">恢复</string>
+    <string name="settings_restore_summary">恢复站点,设置,收藏夹</string>
 
     <string name="restore_Succes">还原成功</string>
 
