--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,8 @@
     <string name="download">下载</string>
     <string name="hvdownload">HV下载</string>
 
+    <string name="pin_lock_message">使用指纹或输入数字密码</string>
+    <string name="pin_lock_wrong">输入了不正确的数字密码</string>
+    <string name="finger_print_lock_wrong">无匹配</string>
+
 </resources>
